新词发现：尚未解决序列化问题